--- a/samples/BlazorBindingsToDo/TodoEntry.razor
+++ b/samples/BlazorBindingsToDo/TodoEntry.razor
@@ -1,5 +1,5 @@
 ﻿@inject AppState AppState
-@inject NavigationService Navigation
+@inject Navigation Navigation
 
 <StackLayout Orientation="StackOrientation.Horizontal">
     <Switch @bind-IsToggled="ItemIsDone" />
