--- a/samples/BlazorBindingsXaminals/Views/CatsPage.razor
+++ b/samples/BlazorBindingsXaminals/Views/CatsPage.razor
@@ -1,4 +1,4 @@
-﻿@inject INavigationService NavigationManager
+﻿@inject INavigation NavigationManager
 
 <ContentPage>
     <CollectionView ItemsSource="CatData.Cats">
