--- a/samples/ControlGallery/Views/Navigation/NavigationTargetModalPage.razor
+++ b/samples/ControlGallery/Views/Navigation/NavigationTargetModalPage.razor
@@ -1,6 +1,6 @@
 ﻿@using ControlGallery.Models
 
-@inject NavigationService Navigation
+@inject Navigation Navigation
 
 <ContentPage Title="Navigation modal">
     <ScrollView>
