--- a/samples/ControlGallery/Views/Navigation/ShellNavigationPage.razor
+++ b/samples/ControlGallery/Views/Navigation/ShellNavigationPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/shell-navigation"
 @using ControlGallery.Models
-@inject NavigationService NavigationManager
+@inject Navigation NavigationManager
 
 <ContentPage Title="Shell navigation">
     <ScrollView>
