--- a/samples/ControlGallery/Views/Shell/BackButtonBehaviorPage.razor
+++ b/samples/ControlGallery/Views/Shell/BackButtonBehaviorPage.razor
@@ -20,7 +20,7 @@
 </ContentPage>
 
 @code {
-    [Inject] INavigationService Navigation { get; set; }
+    [Inject] INavigation Navigation { get; set; }
 
     ContentPage _page;
 
