--- a/samples/ThirdPartyControlsSample/Pages/CommunityToolkitPage.razor
+++ b/samples/ThirdPartyControlsSample/Pages/CommunityToolkitPage.razor
@@ -27,7 +27,7 @@
 </ContentPage>
 
 @code {
-    @inject NavigationService Navigation;
+    @inject Navigation Navigation;
 
     ImageSource urlSource = "https://static.wikia.nocookie.net/firefly/images/f/fa/Wash.jpg";
 
