--- a/samples/BlazorBindingsToDo/TodoEntryDetails.razor
+++ b/samples/BlazorBindingsToDo/TodoEntryDetails.razor
@@ -1,5 +1,5 @@
 ﻿@inject AppState AppState
-@inject NavigationService Navigation
+@inject Navigation Navigation
 
 <ContentPage>
 	<StackLayout Margin="20">
