--- a/samples/ControlGallery/Views/Navigation/NavigationPage.razor
+++ b/samples/ControlGallery/Views/Navigation/NavigationPage.razor
@@ -2,7 +2,7 @@
 
 @using ControlGallery.Models
 
-@inject NavigationService Navigation
+@inject Navigation Navigation
 
 <ContentPage Title="Navigation">
     <ScrollView>
