--- a/src/BlazorBindings.UnitTests/Elements/PickerTests.razor
+++ b/src/BlazorBindings.UnitTests/Elements/PickerTests.razor
@@ -2,9 +2,27 @@
 
 @code {
     [Test]
+    public async Task SetArrayItemsSource()
+    {
+        var items = new[] { 1, 2, 3 };
+        var picker = await Render<MC.Picker>(@<Picker ItemsSource="items" />);
+
+        Assert.That(picker.Items, Is.EqualTo(new[] { "1", "2", "3" }));
+    }
+
+    [Test]
+    public async Task SetListItemsSource()
+    {
+        var items = new List<int> { 1, 2, 3 };
+        var picker = await Render<MC.Picker>(@<Picker ItemsSource="items" />);
+
+        Assert.That(picker.Items, Is.EqualTo(new[] { "1", "2", "3" }));
+    }
+
+    [Test]
     public async Task SetDisplayBinding()
     {
-        var items = new List<string> { "A", "b", "c" };
+        var items = new[] { "A", "b", "c" };
         var picker = await Render<MC.Picker>(
             @<Picker ItemsSource="items" ItemDisplayBinding=@(i => $"-{i.ToUpper()}-") />
         );
