Add tests for IndicatorView and CarouselView

--- a/src/BlazorBindings.UnitTests/Elements/ElementTestBase.razor
+++ b/src/BlazorBindings.UnitTests/Elements/ElementTestBase.razor
@@ -6,6 +6,11 @@
 @implements IHandleEvent
 
 @code {
+    public ElementTestBase()
+    {
+        MC.Application.Current = new TestApplication();
+    }
+
     private TestBlazorBindingsRenderer _renderer = (TestBlazorBindingsRenderer)TestBlazorBindingsRenderer.Create();
     private RenderFragmentComponent _renderedComponent;
 
