--- a/samples/ThirdPartyControlsSample/Pages/AlohaKitPage.razor
+++ b/samples/ThirdPartyControlsSample/Pages/AlohaKitPage.razor
@@ -16,16 +16,16 @@
             <BlazorBindings.Maui.Elements.Slider Minimum="0" Maximum="1" @bind-Value="sliderValue" />
 
             <Grid ColumnDefinitions="*,Auto">
-                <VerticalProgressBar Progress="sliderValue" ProgressColor="Colors.Green" Grid.Column="1" />
+                @*<BlazorBindings.Maui.Elements.AlohaKit.ProgressBar IsVertical="true" Progress="sliderValue" ProgressColor="Colors.Green" Grid.Column="1" />*@
                 <VerticalStackLayout Spacing="8">
-                    <HorizontalProgressBar Progress="sliderValue">
+@*                    <BlazorBindings.Maui.Elements.AlohaKit.ProgressBar Progress="sliderValue">
                         <ProgressBrush>
                             <LinearGradientBrush EndPoint="new(1,0)">
                                 <GradientStop Offset="0" Color="Colors.Red" />
                                 <GradientStop Offset="1" Color="Colors.Green" />
                             </LinearGradientBrush>
                         </ProgressBrush>
-                    </HorizontalProgressBar>
+                    </BlazorBindings.Maui.Elements.AlohaKit.ProgressBar>*@
                     <ProgressRadial Minimum="0" Maximum="100" Value="(int)(sliderValue*100)" />
                 </VerticalStackLayout>
             </Grid>
