Fix ControlGallery error

--- a/samples/ControlGallery/Views/ErrorBoundaries/ErrorBoundariesPage.razor
+++ b/samples/ControlGallery/Views/ErrorBoundaries/ErrorBoundariesPage.razor
@@ -19,7 +19,7 @@
             </VerticalStackLayout>
         </Border>
 
-        <Label>Outside of local Error Boundary</Label> |
+        <Label>Outside of local Error Boundary</Label>
         <Button Text="Throw" OnClick="ThrowException" />
 
         @if (ShowNavigation)
