--- a/samples/ControlGallery/Views/InitiateCommands/SwipeViewPage.razor
+++ b/samples/ControlGallery/Views/InitiateCommands/SwipeViewPage.razor
@@ -1,5 +1,5 @@
 ﻿<ContentPage Title="SwipeView">
-    <VerticalStackLayout Spacing="8">
+    <VerticalStackLayout Spacing="6">
         <Label>Favorite: @_favorite</Label>
 
         @foreach (var item in _items)
@@ -7,18 +7,23 @@
             <SwipeView>
                 <RightItems>
                     <SwipeItems>
-                        <SwipeItem BackgroundColor="Colors.Yellow" Text="Favorite" OnInvoked="() => MakeFavorite(item)" />
-                        <SwipeItem BackgroundColor="Colors.Red" Text="Remove" IsDestructive="true" OnInvoked="() => Remove(item)" />
+                        <SwipeItem BackgroundColor="Colors.Yellow"
+                               Text="Favorite"
+                               OnInvoked="() => MakeFavorite(item)" />
+
+                        <SwipeItem BackgroundColor="Colors.Red"
+                               Text="Remove"
+                               IsDestructive="true"
+                               OnInvoked="() => Remove(item)" />
                     </SwipeItems>
                 </RightItems>
 
                 <ChildContent>
-                    <Border BackgroundColor="Colors.Green" Padding="8" Margin="8" CornerRadius="4">
+                    <ContentView BackgroundColor="Colors.Green" Padding="8">
                         <Label>@item</Label>
-                    </Border>
+                    </ContentView>
                 </ChildContent>
             </SwipeView>
-
         }
     </VerticalStackLayout>
 
