--- a/samples/ControlGallery/Views/Collections/CollectionView/InfiniteScrollPage.razor
+++ b/samples/ControlGallery/Views/Collections/CollectionView/InfiniteScrollPage.razor
@@ -26,22 +26,18 @@
     ObservableCollection<int> _intItems = new(Enumerable.Range(1, 20));
     bool _loading;
 
-    async Task RefreshItems()
-    {
+    async Task RefreshItems() {
         await Task.Delay(1000);
         _intItems = new(Enumerable.Range(_intItems.Min() + 5, 20));
     }
 
-    async Task LoadItems()
-    {
-        if (!_loading)
-        {
+    async Task LoadItems() {
+        if (!_loading) {
             _loading = true;
 
             await Task.Delay(1000);
 
-            foreach (var item in Enumerable.Range(_intItems.Max() + 1, 20))
-            {
+            foreach (var item in Enumerable.Range(_intItems.Max() + 1, 20)) {
                 _intItems.Add(item);
             }
 
