Use Router for URI navigation

--- a/samples/ControlGallery/AppShell.razor
+++ b/samples/ControlGallery/AppShell.razor
@@ -73,7 +73,7 @@
     @*Navigation*@
     <ShellSection Title="Navigation">
         <NavigationPage />
-        <ShellNavigationPage />
+        <UriNavigationPage />
     </ShellSection>
 
     @*Other*@
