Add MDC Popup sample

--- a/samples/ThirdPartyControlsSample/Pages/CommunityToolkitPage.razor
+++ b/samples/ThirdPartyControlsSample/Pages/CommunityToolkitPage.razor
@@ -35,6 +35,6 @@ string popupResult;
 
 async Task ShowPopup()
 {
-    popupResult = (string)await Navigation.ShowPopupAsync<CommunityToolkitPopup>();
+    popupResult = (string)await Navigation.ShowCommunityToolkitPopupAsync<CommunityToolkitPopup>();
 }
 }
