--- a/src/BlazorBindings.UnitTests/Elements/GridTests.razor
+++ b/src/BlazorBindings.UnitTests/Elements/GridTests.razor
@@ -1,10 +1,10 @@
 ﻿@inherits ElementTestBase
 
 @code {
-[Test]
-public async Task AddItemsViaGridCell()
-{
-    var grid = await Render<MC.Grid>(
+    [Test]
+    public async Task AddItemsViaGridCell()
+    {
+        var grid = await Render<MC.Grid>(
     @<Grid>
         <GridCell Row="0" Column="0">
             <Label>0-0</Label>
@@ -22,30 +22,30 @@ public async Task AddItemsViaGridCell()
             <Label>1-1</Label>
         </GridCell>
     </Grid>
-);
+        );
 
-    var label00 = (MC.Label)grid.Children[0];
-    var label01 = (MC.Label)grid.Children[1];
-    var label10 = (MC.Label)grid.Children[2];
-    var label11 = (MC.Label)grid.Children[3];
+        var label00 = (MC.Label)grid.Children[0];
+        var label01 = (MC.Label)grid.Children[1];
+        var label10 = (MC.Label)grid.Children[2];
+        var label11 = (MC.Label)grid.Children[3];
 
-    Assert.That(label00.Text, Is.EqualTo("0-0"));
-    Assert.That(GetGridProps(label00), Is.EqualTo((0, 0, 1, 1)));
+        Assert.That(label00.Text, Is.EqualTo("0-0"));
+        Assert.That(GetGridProps(label00), Is.EqualTo((0, 0, 1, 1)));
 
-    Assert.That(label01.Text, Is.EqualTo("0-1"));
-    Assert.That(GetGridProps(label01), Is.EqualTo((0, 1, 1, 2)));
+        Assert.That(label01.Text, Is.EqualTo("0-1"));
+        Assert.That(GetGridProps(label01), Is.EqualTo((0, 1, 1, 2)));
 
-    Assert.That(label10.Text, Is.EqualTo("1-0"));
-    Assert.That(GetGridProps(label10), Is.EqualTo((1, 0, 2, 1)));
+        Assert.That(label10.Text, Is.EqualTo("1-0"));
+        Assert.That(GetGridProps(label10), Is.EqualTo((1, 0, 2, 1)));
 
-    Assert.That(label11.Text, Is.EqualTo("1-1"));
-    Assert.That(GetGridProps(label11), Is.EqualTo((1, 1, 1, 1)));
-}
+        Assert.That(label11.Text, Is.EqualTo("1-1"));
+        Assert.That(GetGridProps(label11), Is.EqualTo((1, 1, 1, 1)));
+    }
 
-[Test]
-public async Task AddItemsViaAttachedProperties()
-{
-    var grid = await Render<MC.Grid>(
+    [Test]
+    public async Task AddItemsViaAttachedProperties()
+    {
+        var grid = await Render<MC.Grid>(
     @<Grid>
         <Label Grid.Row="0" Grid.Column="0">0-0</Label>
         <Label Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2">0-1</Label>
@@ -54,48 +54,182 @@ public async Task AddItemsViaAttachedProperties()
     </Grid>
     );
 
-    var label00 = (MC.Label)grid.Children[0];
-    var label01 = (MC.Label)grid.Children[1];
-    var label10 = (MC.Label)grid.Children[2];
-    var label11 = (MC.Label)grid.Children[3];
+        var label00 = (MC.Label)grid.Children[0];
+        var label01 = (MC.Label)grid.Children[1];
+        var label10 = (MC.Label)grid.Children[2];
+        var label11 = (MC.Label)grid.Children[3];
 
-    Assert.That(label00.Text, Is.EqualTo("0-0"));
-    Assert.That(GetGridProps(label00), Is.EqualTo((0, 0, 1, 1)));
+        Assert.That(label00.Text, Is.EqualTo("0-0"));
+        Assert.That(GetGridProps(label00), Is.EqualTo((0, 0, 1, 1)));
 
-    Assert.That(label01.Text, Is.EqualTo("0-1"));
-    Assert.That(GetGridProps(label01), Is.EqualTo((0, 1, 1, 2)));
+        Assert.That(label01.Text, Is.EqualTo("0-1"));
+        Assert.That(GetGridProps(label01), Is.EqualTo((0, 1, 1, 2)));
 
-    Assert.That(label10.Text, Is.EqualTo("1-0"));
-    Assert.That(GetGridProps(label10), Is.EqualTo((1, 0, 2, 1)));
+        Assert.That(label10.Text, Is.EqualTo("1-0"));
+        Assert.That(GetGridProps(label10), Is.EqualTo((1, 0, 2, 1)));
 
-    Assert.That(label11.Text, Is.EqualTo("1-1"));
-    Assert.That(GetGridProps(label11), Is.EqualTo((1, 1, 1, 1)));
-}
+        Assert.That(label11.Text, Is.EqualTo("1-1"));
+        Assert.That(GetGridProps(label11), Is.EqualTo((1, 1, 1, 1)));
+    }
 
-[Test]
-public async Task SetColumnDefinitions()
-{
-    var grid = await Render<MC.Grid>(@<Grid ColumnDefinitions="10, Auto, 20, *" /> );
+    [Test]
+    public async Task SetColumnDefinitions()
+    {
+        var grid = await Render<MC.Grid>(@<Grid ColumnDefinitions="10, Auto, 20, *" /> );
 
-    Assert.That(grid.ColumnDefinitions[0].Width.Value, Is.EqualTo(10));
-    Assert.That(grid.ColumnDefinitions[1].Width.GridUnitType, Is.EqualTo(GridUnitType.Auto));
-    Assert.That(grid.ColumnDefinitions[2].Width.Value, Is.EqualTo(20));
-    Assert.That(grid.ColumnDefinitions[3].Width.GridUnitType, Is.EqualTo(GridUnitType.Star));
-}
+        Assert.That(grid.ColumnDefinitions[0].Width.Value, Is.EqualTo(10));
+        Assert.That(grid.ColumnDefinitions[1].Width.GridUnitType, Is.EqualTo(GridUnitType.Auto));
+        Assert.That(grid.ColumnDefinitions[2].Width.Value, Is.EqualTo(20));
+        Assert.That(grid.ColumnDefinitions[3].Width.GridUnitType, Is.EqualTo(GridUnitType.Star));
+    }
 
-[Test]
-public async Task SetRowDefinitions()
-{
-    var grid = await Render<MC.Grid>(@<Grid RowDefinitions="10, Auto, 20, *" /> );
+    [Test]
+    public async Task SetRowDefinitions()
+    {
+        var grid = await Render<MC.Grid>(@<Grid RowDefinitions="10, Auto, 20, *" />);
 
-    Assert.That(grid.RowDefinitions[0].Height.Value, Is.EqualTo(10));
-    Assert.That(grid.RowDefinitions[1].Height.GridUnitType, Is.EqualTo(GridUnitType.Auto));
-    Assert.That(grid.RowDefinitions[2].Height.Value, Is.EqualTo(20));
-    Assert.That(grid.RowDefinitions[3].Height.GridUnitType, Is.EqualTo(GridUnitType.Star));
-}
+        Assert.That(grid.RowDefinitions[0].Height.Value, Is.EqualTo(10));
+        Assert.That(grid.RowDefinitions[1].Height.GridUnitType, Is.EqualTo(GridUnitType.Auto));
+        Assert.That(grid.RowDefinitions[2].Height.Value, Is.EqualTo(20));
+        Assert.That(grid.RowDefinitions[3].Height.GridUnitType, Is.EqualTo(GridUnitType.Star));
+    }
 
-private (int Row, int Column, int RowSpan, int ColumnSpan) GetGridProps(MC.BindableObject target)
-{
-    return (MC.Grid.GetRow(target), MC.Grid.GetColumn(target), MC.Grid.GetRowSpan(target), MC.Grid.GetColumnSpan(target));
-}
+
+    [Test]
+    public async Task AddAndRemoveGridCells()
+    {
+        var insertItems = true;
+
+        var grid = await Render<MC.Grid>(
+    @<Grid>
+        <GridCell Row="0" Column="0">
+            @if (insertItems)
+            {
+                <Label>0-0a</Label>
+            }
+            <Label>0-0b</Label>
+        </GridCell>
+
+        <GridCell Row="0" Column="1" ColumnSpan="2">
+            <Label>0-1a</Label>
+
+            @if (insertItems)
+            {
+                <Label>0-1b</Label>
+            }
+        </GridCell>
+
+        <GridCell Row="1" Column="0" RowSpan="2">
+            <Label>1-0a</Label>
+            <Label>1-0b</Label>
+        </GridCell>
+
+        @if (insertItems)
+        {
+            <GridCell Row="1" Column="1">
+                <Label>1-1a</Label>
+                <Label>1-1b</Label>
+            </GridCell>
+        }
+    </Grid>
+    );
+
+        // Order of children doesn't really matter for Grid.
+        var labels = grid.Children.Cast<MC.Label>().OrderBy(l => l.Text).ToArray();
+        var label00a = labels[0];
+        var label00b = labels[1];
+        var label01a = labels[2];
+        var label01b = labels[3];
+        var label10a = labels[4];
+        var label10b = labels[5];
+        var label11a = labels[6];
+        var label11b = labels[7];
+
+        Assert.That(label00a.Text, Is.EqualTo("0-0a"));
+        Assert.That(GetGridProps(label00a), Is.EqualTo((0, 0, 1, 1)));
+
+        Assert.That(label00b.Text, Is.EqualTo("0-0b"));
+        Assert.That(GetGridProps(label00b), Is.EqualTo((0, 0, 1, 1)));
+
+        Assert.That(label01a.Text, Is.EqualTo("0-1a"));
+        Assert.That(GetGridProps(label01a), Is.EqualTo((0, 1, 1, 2)));
+
+        Assert.That(label01b.Text, Is.EqualTo("0-1b"));
+        Assert.That(GetGridProps(label01b), Is.EqualTo((0, 1, 1, 2)));
+
+        Assert.That(label10a.Text, Is.EqualTo("1-0a"));
+        Assert.That(GetGridProps(label10a), Is.EqualTo((1, 0, 2, 1)));
+
+        Assert.That(label10b.Text, Is.EqualTo("1-0b"));
+        Assert.That(GetGridProps(label10b), Is.EqualTo((1, 0, 2, 1)));
+
+        Assert.That(label11a.Text, Is.EqualTo("1-1a"));
+        Assert.That(GetGridProps(label11a), Is.EqualTo((1, 1, 1, 1)));
+
+        Assert.That(label11b.Text, Is.EqualTo("1-1b"));
+        Assert.That(GetGridProps(label11b), Is.EqualTo((1, 1, 1, 1)));
+
+        insertItems = false;
+        StateHasChanged();
+
+        labels = grid.Children.Cast<MC.Label>().OrderBy(l => l.Text).ToArray();
+        label00b = labels[0];
+        label01a = labels[1];
+        label10a = labels[2];
+        label10b = labels[3];
+
+        Assert.That(label00b.Text, Is.EqualTo("0-0b"));
+        Assert.That(GetGridProps(label00b), Is.EqualTo((0, 0, 1, 1)));
+
+        Assert.That(label01a.Text, Is.EqualTo("0-1a"));
+        Assert.That(GetGridProps(label01a), Is.EqualTo((0, 1, 1, 2)));
+
+        Assert.That(label10a.Text, Is.EqualTo("1-0a"));
+        Assert.That(GetGridProps(label10a), Is.EqualTo((1, 0, 2, 1)));
+
+        Assert.That(label10b.Text, Is.EqualTo("1-0b"));
+        Assert.That(GetGridProps(label10b), Is.EqualTo((1, 0, 2, 1)));
+
+        insertItems = true;
+        StateHasChanged();
+
+        labels = grid.Children.Cast<MC.Label>().OrderBy(l => l.Text).ToArray();
+        label00a = labels[0];
+        label00b = labels[1];
+        label01a = labels[2];
+        label01b = labels[3];
+        label10a = labels[4];
+        label10b = labels[5];
+        label11a = labels[6];
+        label11b = labels[7];
+
+        Assert.That(label00a.Text, Is.EqualTo("0-0a"));
+        Assert.That(GetGridProps(label00a), Is.EqualTo((0, 0, 1, 1)));
+
+        Assert.That(label00b.Text, Is.EqualTo("0-0b"));
+        Assert.That(GetGridProps(label00b), Is.EqualTo((0, 0, 1, 1)));
+
+        Assert.That(label01a.Text, Is.EqualTo("0-1a"));
+        Assert.That(GetGridProps(label01a), Is.EqualTo((0, 1, 1, 2)));
+
+        Assert.That(label01b.Text, Is.EqualTo("0-1b"));
+        Assert.That(GetGridProps(label01b), Is.EqualTo((0, 1, 1, 2)));
+
+        Assert.That(label10a.Text, Is.EqualTo("1-0a"));
+        Assert.That(GetGridProps(label10a), Is.EqualTo((1, 0, 2, 1)));
+
+        Assert.That(label10b.Text, Is.EqualTo("1-0b"));
+        Assert.That(GetGridProps(label10b), Is.EqualTo((1, 0, 2, 1)));
+
+        Assert.That(label11a.Text, Is.EqualTo("1-1a"));
+        Assert.That(GetGridProps(label11a), Is.EqualTo((1, 1, 1, 1)));
+
+        Assert.That(label11b.Text, Is.EqualTo("1-1b"));
+        Assert.That(GetGridProps(label11b), Is.EqualTo((1, 1, 1, 1)));
+    }
+
+    private (int Row, int Column, int RowSpan, int ColumnSpan) GetGridProps(MC.BindableObject target)
+    {
+        return (MC.Grid.GetRow(target), MC.Grid.GetColumn(target), MC.Grid.GetRowSpan(target), MC.Grid.GetColumnSpan(target));
+    }
 }
